<resources>
    <string name="app_name">Dota2 lastmatch</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="heroImage">heroImage</string>
    <string name="nameHeroTextView">name_hero</string>
    <string name="modeTextLabel">MODE</string>
    <string name="modeValueTextView">mode_value</string>
    <string name="kdaLabelTextView">K / D / A</string>
    <string name="kdaValueTextView">kda_value</string>
    <string name="durationLabel">DURATION</string>
</resources>