<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.Dota2Lastmatch.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/Theme.Dota2Lastmatch.AppWidgetContainer"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/heroImage"
        android:layout_width="121dp"
        android:layout_height="120dp"
        android:layout_marginEnd="19dp"
        android:contentDescription="@string/heroImage" />

    <RelativeLayout
        android:id="@+id/heroNameContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/heroImage"
        android:layout_marginBottom="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/heroNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/nameHeroTextView"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/modeTextLabel" />

                <TextView
                    android:id="@+id/modeGameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/modeValueTextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kdaLabelTextView" />

                <TextView
                    android:id="@+id/kdaTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kdaValueTextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/durationLabel" />

                <TextView
                    android:id="@+id/durationTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="DURACION_VALUE" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="RESUL" />

                <TextView
                    android:id="@+id/resultTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="RESULT_VALUE" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/heroNameContainer">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:columnCount="6"
            android:rowCount="3">

            <ImageView
                android:id="@+id/item1"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:contentDescription="@string/heroImage"
                android:src="@drawable/ic_launcher_background" />

            <ImageView
                android:id="@+id/item2"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/heroImage"
                android:src="@drawable/ic_launcher_background" />

            <ImageView
                android:id="@+id/item3"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/heroImage"
                android:src="@drawable/ic_launcher_background" />

            <ImageView
                android:id="@+id/itemNeutral"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_row="0"
                android:layout_column="4"
                android:contentDescription="@string/heroImage"
                android:src="@drawable/ic_launcher_background" />

            <ImageView
                android:id="@+id/item4"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_row="0"
                android:layout_column="3"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:contentDescription="@string/heroImage"
                android:src="@drawable/ic_launcher_background" />

            <ImageView
                android:id="@+id/item5"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_row="1"
                android:layout_column="0"
                android:contentDescription="@string/heroImage"
                android:src="@drawable/ic_launcher_background" />

            <ImageView
                android:id="@+id/item6"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_row="1"
                android:layout_column="1"
                android:contentDescription="@string/heroImage"
                android:src="@drawable/ic_launcher_background" />

            <ImageView
                android:id="@+id/itemBackpack1"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_row="1"
                android:layout_column="2"
                android:contentDescription="@string/heroImage"
                android:src="@drawable/ic_launcher_background" />

            <ImageView
                android:id="@+id/itemBackpack2"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_row="1"
                android:layout_column="3"
                android:contentDescription="@string/heroImage"
                android:src="@drawable/ic_launcher_background" />

            <ImageView
                android:id="@+id/itemBackpack3"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_row="1"
                android:layout_column="4"
                android:contentDescription="@string/heroImage"
                android:src="@drawable/ic_launcher_background" />
        </GridLayout>

    </RelativeLayout>

    </RelativeLayout>